# Voidpilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  BRAINSTORM.md  CLAUDE.md  Dockerfile  GEMINI.md  HACKATHON.md  MIDSCENE_COMPUTER_RESEARCH.md  README.md  REFACTOR_SUMMARY.md  dev.ps1  dev.sh  ideas.md  mcp_assumptions.md  print_comments.py  pyproject.toml  ruff.toml  skeleton.txt  skills-lock.json  test_live.py  tools_ref.ts  update_features.py
.Jules/: palette.md
.factory/: init.sh  services.yaml
.github/workflows/: ci.yml  deploy-gcloud.yml  gemini-invoke.yml  (+7 more)
bash-mcp-server/: Dockerfile  server.py
docs/: BRAINSTORM.md  DEMO_SCRIPT.md  HACKATHON.md  Revised_Script.md  SPEC_FILE_SEARCH_TOOL.md
frontend/: .gitignore  AGENTS.md  DESIGN_SYSTEM.md  components.json  eslint.config.js  index.html  main.ts  non-threejs-non-icon-files.md  package-lock.json  package.json  playwright.config.ts  preload.ts  vite.config.ts
gemini-live-api-examples/: README.md
scripts/: delete_file_store.py  dev.ps1  dev.sh  file_store.py  setup_file_search_store.py
tests/: test_brainstorm.py  test_brainstorm_artifact_persistence.py  test_brainstorm_mode_routing.py  test_brainstorm_session_library.py  test_brainstorm_session_metadata.py  test_brainstorm_share.py  test_brainstorm_turn_persistence.py  test_creative_spark.py  test_firebase_foundation.py  test_flash_worker.py  test_gemini_audio_sanitization.py  test_generate_threejs.py  test_live.py  test_midscene_tool.py  test_session_resumption.py  test_share_preview_route.py  test_tool_scheduling_fixes.py  test_walkthrough.py
(+258 files in other folders)
